<resources>
    <string name="app_name">Student Faculty Application</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No Account Yet? Creat One</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a member ?Login</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>

    <string-array name="days">
        <item>A_day</item>
        <item>B_day</item>
        <item>C_day</item>
        <item>D_day</item>
        <item>E_day</item>

    </string-array>

</resources>
