<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/nestedScrollView"
    tools:context="com.example.user.studentfacultyapplication.activities.Register2Activity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorText"
                android:maxLines="1"
                android:inputType="text"
                android:textColorHint="@color/colorText"
                android:hint="@string/hint_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorText"
                android:maxLines="1"
                android:inputType="text"
                android:textColorHint="@color/colorText"
                android:hint="@string/hint_email"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorText"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColorHint="@color/colorText"
                android:hint="@string/hint_password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorText"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColorHint="@color/colorText"
                android:hint="@string/hint_confirm_password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:background="@color/colorTextHint"
            android:id="@+id/appCompatButtonRegister"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorText"
            android:text="@string/text_register"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:text="@string/text_member"
            android:textSize="16sp"
            android:gravity="center"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>

